(fix): fix nav background color in high-contrast mode #59963

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -14,6 +14,12 @@
     padding: 0 15px;
   }
 }
+@media (forced-colors: active) {
+  .universal-nav {
+    forced-color-adjust: none;
+    background-color: var(--gray-90);
+  }
+}
 
 .universal-nav a {
   text-decoration: none;
